fix contrast, fix alt text

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  background-color: #78716c;
+  background-color: #262626;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
